--- a/literature.bib
+++ b/literature.bib
@@ -553,8 +553,8 @@ url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3709126{\&}tool
 volume = {49},
 year = {2013}
 }
-@article{D'Arcy2014,
-author = {D'Arcy, Mitch and Whittaker, Alexander C.},
+@article{DArcy2014,
+author = {DArcy, Mitch and Whittaker, Alexander C.},
 doi = {10.1016/j.geomorph.2013.08.019},
 file = {::},
 issn = {0169555X},
@@ -693,11 +693,6 @@ url = {http://doi.wiley.com/10.1029/2010JF001875},
 urldate = {2013-10-18},
 volume = {116},
 year = {2011}
-}
-@article{Fenwick,
-author = {Fenwick, John},
-file = {::},
-title = {{Slope-area method of flow measurement Slope-area}}
 }
 @article{Ferrier2013a,
 author = {Ferrier, K. L. and Perron, J. T. and Mukhopadhyay, S. and Rosener, M. and Stock, J. D. and Huppert, K. L. and Slosberg, M.},
@@ -1133,12 +1128,6 @@ title = {{Investigation of the relationships between basin morphology , tectonic
 volume = {104},
 year = {1999}
 }
-@article{Information,
-author = {Information, Supplementary},
-doi = {10.1038/NCLIMATE2258},
-file = {::},
-title = {{Heavier summer downpours with climate change revealed by weather forecast resolution model}}
-}
 @techreport{IPCC2014,
 author = {IPCC},
 file = {::},
@@ -1364,12 +1353,6 @@ url = {http://doi.wiley.com/10.1029/2008GL036445},
 volume = {36},
 year = {2009}
 }
-@article{Llasat,
-author = {Llasat, Mar{\'{\i}}a-carmen and Rigo, Tomeu and Montes, Josep-mar{\'{\i}}a},
-file = {::},
-pages = {1--16},
-title = {{OROGRAPHIC ROLE IN THE TEMPORAL AND SPATIAL DISTRIBUTION OF PRECIPITATION . THE CASE OF THE INTERNAL BASINS OF CATALONIA ( SPAIN )}}
-}
 @article{Luis2010,
 author = {Luis, M D E and Gonza, J C},
 journal = {Land Degradation and Development},
@@ -1571,7 +1554,7 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/22158439},
 volume = {2},
 year = {2011}
 }
-@article{O'Loughlin1986,
+@article{OLoughlin1986,
 author = {O'Loughlin, E. M.},
 file = {::},
 journal = {Water Resources Research},
@@ -1581,7 +1564,7 @@ title = {{Prediction of surface saturation zones in natural catchments by topogr
 volume = {22},
 year = {1986}
 }
-@article{O'Loughlin1981,
+@article{OLoughlin1981,
 author = {O'Loughlin, E. M.},
 file = {::},
 journal = {Journal of Hydrology},
@@ -2318,13 +2301,6 @@ pages = {54--74},
 title = {{Magnitude and frequency of forces in geomorphic processes}},
 year = {1960}
 }
-@article{Yuter,
-author = {Yuter, Sandra E and Payne, M Jordan and Stark, David A and Colle, Brian A and Carolina, North and Brook, Stony},
-file = {::},
-number = {9},
-pages = {549766},
-title = {{Orographic precipitation and kinematic flow structures of winter storms over the U . S . Pacific Northwest}}
-}
 @article{Zaprowski2005,
 author = {Zaprowski, Brent J and Pazzaglia, Frank J and Evenson, Edward B},
 doi = {10.1029/2004JF000138},
@@ -2355,24 +2331,10 @@ title = {{Atmospheric rivers and bombs}},
 volume = {21},
 year = {2002}
 }
-@article{,
-file = {::},
-title = {{What about stable slopes ? Basic climatic differences}}
-}
-@misc{,
-file = {::},
-title = {2b}
-}
-@article{,
-number = {January},
-pages = {1--33},
-title = {{User Guide for parallelSPHYSICS v2 . 0 using MPI}},
-year = {2011}
-}
-@misc{,
-file = {::},
-title = {{Auxiliary{\_}readme}}
-}
+%@misc{,
+%file = {::},
+%title = {{Auxiliary{\_}readme}}
+%}
 %%%%%%%
 @article{ahnert1976quantitative,
   title={Brief description of a comprehensive three-dimensional process-response model of landform development},
@@ -2854,8 +2816,8 @@ title = {{Auxiliary{\_}readme}}
   pages={230--235},
   year={2005},
   publisher={Wiley Online Library}
-@book{beven2011rainfall,
 }
+@book{beven2011rainfall,
   title={Rainfall-runoff modelling: the primer},
   author={Beven, Keith J},
   year={2011},
@@ -2923,9 +2885,70 @@ title = {{Auxiliary{\_}readme}}
   year={2011},
   publisher={Wiley Online Library}
 }
-
-
-
+@article{pitt2008pitt,
+  title={The Pitt Review: Lessons learned from the 2007 floods},
+  author={Pitt, Michael},
+  journal={Cabinet Office, London},
+  volume={505},
+  number={4},
+  year={2008}
+}
+@article{kendon2014heavier,
+  title={Heavier summer downpours with climate change revealed by weather forecast resolution model},
+  author={Kendon, Elizabeth J and Roberts, Nigel M and Fowler, Hayley J and Roberts, Malcolm J and Chan, Steven C and Senior, Catherine A},
+  journal={Nature Climate Change},
+  volume={4},
+  number={7},
+  pages={570--576},
+  year={2014},
+  publisher={Nature Research}
+}
+@article{slater2015hydrologic,
+  title={Hydrologic versus geomorphic drivers of trends in flood hazard},
+  author={Slater, Louise J and Singer, Michael Bliss and Kirchner, James W},
+  journal={Geophysical Research Letters},
+  volume={42},
+  number={2},
+  pages={370--376},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+@article{slater2016extent,
+  title={To what extent have changes in channel capacity contributed to flood hazard trends in England and Wales?},
+  author={Slater, Louise J},
+  journal={Earth Surface Processes and Landforms},
+  volume={41},
+  number={8},
+  pages={1115--1128},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+@article{wong2015sensitivity,
+  title={Sensitivity of a hydraulic model to channel erosion uncertainty during extreme flooding},
+  author={Wong, Jefferson S and Freer, Jim E and Bates, Paul D and Sear, David A and Stephens, Elisabeth M},
+  journal={Hydrological Processes},
+  volume={29},
+  number={2},
+  pages={261--279},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+@article{burt2005cloudburst,
+  title={Cloudburst upon Hendraburnick Down: The Boscastle storm of 16 August 2004},
+  author={Burt, Stephen},
+  journal={Weather},
+  volume={60},
+  number={8},
+  pages={219--227},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+@book{wallingford2005flooding,
+  title={Flooding in Boscastle and North Cornwall, August 2004. Phase 2 studies report},
+  author={Wallingford, HR},
+  year={2005},
+  publisher={HR Wallingford}
+}
 
 
 
